# test

./: CMakeLists.txt  analyzer.cpp  analyzer.h  ast.cpp  ast.h  compiler.cpp  compiler.h  judge.toml  main.cpp  opcode.h  parser.cpp  parser.h  scanner.cpp  scanner.h  symbol_table.cpp  symbol_table.h  test_analyzer.cpp  test_parser.cpp  test_scanner.cpp
